force-app/main/default/objects/Service_Package__c/Service_Package__c.object-meta.xml
<CustomObject>
    <description>According to Sales history Service Packages can be created by any department.

Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales record of Customer.</description>
    <label>Service Package</label>
    <nameField>
        <label>Service Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Packages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>