force-app/main/default/objects/Service_Package__c/fields/Auto_Link__c.field-meta.xml
<CustomField>
    <fullName>Auto_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By:- Riddhi Mittal
Created At:- 11/17/2020
US:- GD-1335
Purpose:- Initial connection Service Package/Vehicle automatic</description>
    <label>Auto Link</label>
    <type>Checkbox</type>
</CustomField>