force-app/main/default/objects/Service_Package__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>