force-app/main/default/objects/Service_Package__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Service Center</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Service Packages</relationshipLabel>
    <relationshipName>Service_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>