force-app/main/default/objects/Service_Package__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>