force-app/main/default/objects/Service_Package__c/fields/Distributor_code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_code__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Distributor code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>