force-app/main/default/objects/Service_Package__c/fields/EffectiveDateFlag__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateFlag__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Effective Date Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>