force-app/main/default/objects/Service_Package__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>