force-app/main/default/objects/Service_Package__c/fields/IsForAllModel__c.field-meta.xml
<CustomField>
    <fullName>IsForAllModel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Is For All Model</label>
    <type>Checkbox</type>
</CustomField>