force-app/main/default/objects/Service_Package__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Model Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>