force-app/main/default/objects/Service_Package__c/fields/Net_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Cost__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <formula>SpTotal_Cost__c -( SpTotal_Cost__c  *  Discount__c )</formula>
    <label>Net Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>