force-app/main/default/objects/Service_Package__c/fields/Package_Number__c.field-meta.xml
<CustomField>
    <fullName>Package_Number__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer</description>
    <label>Package Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>