force-app/main/default/objects/Service_Package__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 06/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Requester</label>
    <referenceTo>VehicleUser__c</referenceTo>
    <relationshipLabel>Service Packages</relationshipLabel>
    <relationshipName>Service_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>