force-app/main/default/objects/Service_Package__c/fields/Service_package_line_item__c.field-meta.xml
<CustomField>
    <fullName>Service_package_line_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 06/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Service package line item</label>
    <referenceTo>Service_Package_Item__c</referenceTo>
    <relationshipLabel>Service Packages (Service package line item)</relationshipLabel>
    <relationshipName>Service_Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>