force-app/main/default/objects/Service_Package__c/fields/Service_Package_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Number__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Service Package Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>