force-app/main/default/objects/Service_Package__c/fields/Service_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Type__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 06/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Service Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_package_type</valueSetName>
    </valueSet>
</CustomField>