force-app/main/default/objects/Service_Package__c/fields/SpBrand__c.field-meta.xml
<CustomField>
    <fullName>SpBrand__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>