force-app/main/default/objects/Service_Package__c/fields/SpEngine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>SpEngine_Capacity__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Engine Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2,999 cc (183.0 cu in)</fullName>
            </value>
            <value>
                <fullName>3,342 cc (203.9 cu in) G6DH</fullName>
            </value>
            <value>
                <fullName>3,778 cc (230.5 cu in) G6DJ</fullName>
            </value>
            <value>
                <fullName>5,038 cc (307.4 cu in)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>