force-app/main/default/objects/Service_Package__c/fields/SpEngine_No__c.field-meta.xml
<CustomField>
    <fullName>SpEngine_No__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Engine No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>