force-app/main/default/objects/Service_Package__c/fields/SpEngine_Type__c.field-meta.xml
<CustomField>
    <fullName>SpEngine_Type__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.0T</fullName>
            </value>
            <value>
                <fullName>2.2D</fullName>
            </value>
            <value>
                <fullName>3.3</fullName>
            </value>
            <value>
                <fullName>3.3T</fullName>
            </value>
            <value>
                <fullName>3.8</fullName>
            </value>
            <value>
                <fullName>5.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>