force-app/main/default/objects/Service_Package__c/fields/SpExternal_ID__c.field-meta.xml
<CustomField>
    <fullName>SpExternal_ID__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>