force-app/main/default/objects/Service_Package__c/fields/SpLAST_MODIFIED_DATE__c.field-meta.xml
<CustomField>
    <fullName>SpLAST_MODIFIED_DATE__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>LAST MODIFIED DATE</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>