force-app/main/default/objects/Service_Package__c/fields/SpProduct__c.field-meta.xml
<CustomField>
    <fullName>SpProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Service_Package_Item__c</referenceTo>
    <relationshipLabel>Service Packages</relationshipLabel>
    <relationshipName>Service_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>