force-app/main/default/objects/Service_Package__c/fields/SpTotal_Cost__c.field-meta.xml
<CustomField>
    <fullName>SpTotal_Cost__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Total Cost</label>
    <summarizedField>Service_Package_Item__c.SpiTotal_Cost__c</summarizedField>
    <summaryForeignKey>Service_Package_Item__c.Service_Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>