force-app/main/default/objects/Service_Package__c/fields/SpValidity_Until__c.field-meta.xml
<CustomField>
    <fullName>SpValidity_Until__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 05/11/2030
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Validity Until</label>
    <type>Date</type>
</CustomField>