force-app/main/default/objects/Service_Package__c/fields/Total_Amount_of_Remaining_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Remaining_Services__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 06/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <formula>Total_Services__c-Completed_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Remaining Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>