force-app/main/default/objects/Service_Package__c/fields/Total_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Services__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 06/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Total Services</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>