force-app/main/default/objects/Service_Package__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Validity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>4 Year</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>6 Year</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>8 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>