force-app/main/default/objects/Service_Package__c/fields/Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Name__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 06/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <formula>Requester__r.Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>