force-app/main/default/objects/Service_Package__c/recordTypes/NSC.recordType-meta.xml
<RecordType>
    <fullName>NSC</fullName>
    <active>true</active>
    <label>NSC</label>
</RecordType>