force-app/main/default/objects/Service_Package__c/validationRules/AfterSales_ServicePackage_Validity_Until.validationRule-meta.xml
<ValidationRule>
    <fullName>AfterSales_ServicePackage_Validity_Until</fullName>
    <active>true</active>
    <errorConditionFormula>SpValidity_From__c  &gt;  SpValidity_Until__c
&amp;&amp;
$Profile.Name != &quot;DIH Integration Profile&quot;</errorConditionFormula>
    <errorDisplayField>SpValidity_Until__c</errorDisplayField>
    <errorMessage>Validity Until Cannot be before Validity From</errorMessage>
</ValidationRule>