force-app/main/default/objects/Service_Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>IsForAllModel__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>SpValidity_From__c</columns>
    <columns>SpValidity_Until__c</columns>
    <columns>Auto_Link__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>